# vb_gcal

./: .gitignore  README.md  config.py  credentials.json_production_sample  gcal.py  helpers.py  pyproject.toml  requirements.py  requirements.txt  run.py  team_data.py  todo.txt  vb_scrape.py
config/: config.yml_sample
models/: Game.py
src/vb_cal/: gcal.py  run.py  vb_scrape.py
use_cases/: gcal.py  user_input.py  vb_scrape.py
