[tool.poetry]
name = "vb-gcal"
version = "1.0.0"
description = "create calendar events the the lastest NY Urban volleyball team"
authors = ["Erik Shagdar <erik.shagdar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
google-api-python-client = "^2.103.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
app-props = {git = "https://github.com/ericgarig/AppProps"}
pytz = "^2023.3.post1"
selenium = "^4.14.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
